<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_add_remove_member"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_close_add_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_close_add_remove_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_add_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/btn_text_add_contact"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorOrange" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/btn_text_save_contact"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorGreen" />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>